appId: dev.expo.updatese2e
onFlowStart:
  - runScript: ./maestroUpdatesApi.js
  - evalScript:
      script:  ${output.api.restartUpdatesServer()}
      label: Restart updates server
---
- launchApp
- assertVisible:
    label: Assert embedded update is visible
    text: "maestroString test"
- tapOn: "reload"
- evalScript:
    script: ${output.api.delay(2000)}
    label: Delay for 2 seconds
- assertVisible:
    label: Assert embedded update is visible
    text: "maestroString test"
- stopApp
- launchApp
- assertVisible:
    label: Assert app is visible after stop and launch
    text: "maestroString test"
- stopApp
